some test stuff

--- a/client/app/components/home/home.html
+++ b/client/app/components/home/home.html
@@ -4,6 +4,9 @@
 </header>
 <main>
   <div>
-    <h1>Found in {{ $ctrl.name }}.html</h1>
+    <uib-tab heading="Tab Heading" index="0">
+      Tab Content
+    </uib-tab>
+    
   </div>
 </main>
