added my button

--- a/client/app/components/home/hero/hero.html
+++ b/client/app/components/home/hero/hero.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container hero">
   <div class="jumbotron">
     <h1>Tada! Here is first angular app</h1>
     <p>Here you can enter the movie and rank it</p>
-    <my-button class="hero__my-btn"/>
+    <difficulty-button class="hero__difficulty-btn"/>
   </div>
 </div>
