--- a/client/app/components/home/home.html
+++ b/client/app/components/home/home.html
@@ -8,7 +8,9 @@
   <div>
     <uib-tab heading="Tab Heading" index="0">
       <div class="container">
-        <input type="text" ng-model="search" placeholder="search">
+        <login-btn></login-btn> 
+        
+        <!--<input type="text" ng-model="search" placeholder="search">
         <button type="button" ng-if="$ctrl.isDescriptionHidden" ng-click="$ctrl.showDescr()">Show Description</button>
         <button type="button" ng-if="!$ctrl.isDescriptionHidden"  ng-click="$ctrl.hideDescr()">Hide Description</button>
         <ul class="features-list">
@@ -24,7 +26,7 @@
           <input type="text" placeholder="feature's description'" id="description" name="description" ng-model="$ctrl.description">
           <button class="btn btn-success" type="submit">Add</button>
 
-        </form>
+        </form>-->
       </div>
     </uib-tab>
 
