moved movie stat component

--- a/client/app/components/home/home.html
+++ b/client/app/components/home/home.html
@@ -11,7 +11,7 @@
         <div class="container">
           <movie-stat></movie-stat>
           <movie-list></movie-list>
-          <movie-stat></movie-stat>
+          <!--<movie-stat></movie-stat>-->
         </div>
       </div>
     </uib-tab>
