--- a/client/app/components/home/movieStat/movieStat.html
+++ b/client/app/components/home/movieStat/movieStat.html
@@ -1,5 +1,5 @@
-<div>
-  <snan>Total:</snan> {{$ctrl.getStat().total}}
+<div/>
+  <snan>Total:</snan> {{$ctrl.stat.total}}
   <snan>Liked:</snan> {{$ctrl.stat.liked}}
   <snan>Disliked:</snan> {{$ctrl.stat.disliked}}
   <snan>Unspecified:</snan> {{$ctrl.stat.unspecified}}
