added pub-sub to service. changed buttons

--- a/client/app/components/home/home.html
+++ b/client/app/components/home/home.html
@@ -9,9 +9,10 @@
     <uib-tab heading="Tab Heading" index="0">
       <div class="container">
         <div class="container">
+          <button type="button" class="btn btn-info">tada!</button>
           <movie-stat></movie-stat>
           <movie-list></movie-list>
-          <!--<movie-stat></movie-stat>-->
+
         </div>
       </div>
     </uib-tab>
