--- a/client/app/components/home/movieStat/movieStat.html
+++ b/client/app/components/home/movieStat/movieStat.html
@@ -1,6 +1,6 @@
 <div/>
-  <snan>Total:</snan> {{$ctrl.stat.total}}
-  <snan>Liked:</snan> {{$ctrl.stat.liked}}
-  <snan>Disliked:</snan> {{$ctrl.stat.disliked}}
+  <snan>Total:</snan> {{$ctrl.getStat().total}} <br>
+  <snan>Liked:</snan> {{$ctrl.stat.liked}} <br>
+  <snan>Disliked:</snan> {{$ctrl.stat.disliked}} <br>
   <snan>Unspecified:</snan> {{$ctrl.stat.unspecified}}
 </div>
