--- a/client/app/components/home/movieStat/movieStat.html
+++ b/client/app/components/home/movieStat/movieStat.html
@@ -1,4 +1,4 @@
-<div/>
+<div class="bg-info"/>
   <snan>Total:</snan> {{$ctrl.getStat().total}} <br>
   <snan>Liked:</snan> {{$ctrl.stat.liked}} <br>
   <snan>Disliked:</snan> {{$ctrl.stat.disliked}} <br>
