--- a/client/app/common/navbar/navbar.scss
+++ b/client/app/common/navbar/navbar.scss
@@ -1,21 +1,7 @@
 @import '../common';
 
-.navbar{
-  height: 6.5rem;
-  background-color: $primaryColor;
-  padding: 1rem;
-  .nav-links
-  .logo{
-    display: inline-block;
-  }
-  .logo{
-    color: $lightTextColor;
-    margin-right: 50%;
-  } 
-  .nav-links{
-    span{
-      color: $lightTextColor;
-      font-size: 1.6rem;
-    }
-  }
+.navigation{
+  padding: 5px 10px;
+  background-color: #a8a8a8;
+  border-radius: 0px 0px 5px 5px;
 }
