login check promise

--- a/client/app/components/home/hero/hero.html
+++ b/client/app/components/home/hero/hero.html
@@ -1,4 +1,4 @@
-<div class="container hero">
+<div class="hero">
   <div class="jumbotron">
     <h1>Tada! Here is first angular app</h1>
     <p>Here you can enter the movie and rank it</p>
