--- a/client/app/components/home/home.html
+++ b/client/app/components/home/home.html
@@ -1,13 +1,10 @@
 <navbar></navbar>
-<header>
-  <hero>
-  </hero>
 
-</header>
+<hero></hero>
+
 <main>
   <div>
     <uib-tab heading="Tab Heading" index="0">
-      <button type="button" class="btn btn-info">tada!</button>
       <movie-stat></movie-stat>
       <movie-list></movie-list>
 
