--- a/client/app/components/home/movieStat/movieStat.html
+++ b/client/app/components/home/movieStat/movieStat.html
@@ -1,5 +1,5 @@
-<div class="bg-info"/>
-  <snan>Total:</snan> {{$ctrl.getStat().total}} <br>
+<div class="bg-info col-md-2 well " asd="$ctrl.getStat()"/>
+  <snan>Total:</snan> {{$ctrl.stat.total}} <br>
   <snan>Liked:</snan> {{$ctrl.stat.liked}} <br>
   <snan>Disliked:</snan> {{$ctrl.stat.disliked}} <br>
   <snan>Unspecified:</snan> {{$ctrl.stat.unspecified}}
