--- a/client/app/components/login/login.html
+++ b/client/app/components/login/login.html
@@ -1,19 +1,22 @@
 <div class="container">
   <div class="row">
-    <form class="col-md-6 col-md-offset-3 login-form">
-      <div class="form-group">
+    <form class="col-md-6 col-md-offset-3 login-form" name="$ctrl.form"
+          ng-submit="$ctrl.login($ctrl.user)">
+      <div class="form-group" >
         <h2>Login form</h2>
       </div>
       <div class="form-group">
         <label for="login">Login</label>
-        <input type="text" class="form-control" id="login" placeholder="Login">
+        <input type="text" class="form-control" id="login"
+               placeholder="Login" required="true" ng-model="$ctrl.user.login">
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" placeholder="Password">
+        <input type="password" class="form-control" id="password"
+               placeholder="Password" required="true" ng-model="$ctrl.user.password">
       </div>
-
-      <button type="submit" class="btn btn-default">Submit</button>
+      <input type="submit" class="btn btn-info" value="Submit">
+      <span>{{$ctrl.form}}</span>
     </form>
   </div>
 </div>
