added movie details page. code cleaned

--- a/client/app/components/about/about.html
+++ b/client/app/components/about/about.html
@@ -1,5 +1,22 @@
-<navbar></navbar>
 <h1>{{ $ctrl.name }}</h1>
 <section>
-  About us.
+  <article>
+    <h3>Lorem ipsum dolor.</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci aspernatur culpa cumque dignissimos dolore,
+      dolorem doloribus eaque eligendi esse est eveniet fugiat harum incidunt ipsum iste libero magnam maiores minus
+      nesciunt nisi nobis nostrum perspiciatis quaerat quidem quis recusandae reiciendis rerum suscipit tempore totam
+      velit veritatis, vero. Praesentium, vero.</p>
+    <p>Aliquid eveniet hic molestias officiis possimus tempora. Architecto eum explicabo magni officiis rerum soluta,
+      totam! Eius nesciunt ratione suscipit tenetur vitae. A aliquid animi culpa cum, debitis dolor dolore eum explicabo
+      illum impedit, incidunt ipsum iste minus mollitia nam non obcaecati officia placeat rem sapiente sint sit vero
+      voluptate voluptatem.</p>
+    <p>At distinctio ipsum quam voluptas voluptatem. Alias aliquam aperiam consequuntur deleniti doloremque ex fuga in
+      modi molestiae natus neque non perferendis reiciendis, rem reprehenderit ullam ut vero voluptates? At, corporis
+      cupiditate deserunt in minima praesentium sed. Ad blanditiis debitis esse laborum maiores non obcaecati officia,
+      quae quia reprehenderit rerum sunt?</p>
+    <p>A, accusamus ad animi asperiores atque beatae commodi cum dicta earum eius eligendi eos, eveniet, facere fuga
+      illo magni modi nisi nulla numquam officia perspiciatis placeat porro quae sequi sint tempore tenetur velit! A
+      accusamus autem excepturi ipsum iure laboriosam minima molestiae sint. Accusamus at, ducimus earum fugit qui
+      soluta?</p>
+  </article> 
 </section>
