--- a/client/app/components/home/movieStat/movieStat.html
+++ b/client/app/components/home/movieStat/movieStat.html
@@ -1,6 +1,6 @@
-<div class="bg-info col-md-2 well " asd="$ctrl.getStat()"/>
-  <snan>Total:</snan> {{$ctrl.stat.total}} <br>
-  <snan>Liked:</snan> {{$ctrl.stat.liked}} <br>
-  <snan>Disliked:</snan> {{$ctrl.stat.disliked}} <br>
+<div class="col-md-12 alert alert-info" asd="$ctrl.getStat()"/>
+  <snan>Total:</snan> {{$ctrl.stat.total}} |
+  <snan>Liked:</snan> {{$ctrl.stat.liked}} |
+  <snan>Disliked:</snan> {{$ctrl.stat.disliked}} |
   <snan>Unspecified:</snan> {{$ctrl.stat.unspecified}}
 </div>
