added ngInject directive

--- a/client/app/components/about/about.html
+++ b/client/app/components/about/about.html
@@ -1,6 +1,6 @@
 <h1>{{ $ctrl.name }}</h1>
 <section>
-  <article>
+  <article class="well">
     <h3>Lorem ipsum dolor.</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci aspernatur culpa cumque dignissimos dolore,
       dolorem doloribus eaque eligendi esse est eveniet fugiat harum incidunt ipsum iste libero magnam maiores minus
@@ -18,5 +18,5 @@
       illo magni modi nisi nulla numquam officia perspiciatis placeat porro quae sequi sint tempore tenetur velit! A
       accusamus autem excepturi ipsum iure laboriosam minima molestiae sint. Accusamus at, ducimus earum fugit qui
       soluta?</p>
-  </article> 
+  </article>
 </section>
