--- a/client/app/components/home/movieStat/movieStat.html
+++ b/client/app/components/home/movieStat/movieStat.html
@@ -1,6 +1,6 @@
 <div class="col-md-12 alert alert-info" asd="$ctrl.getStat()"/>
-  <snan>Total:</snan> {{$ctrl.stat.total}} |
-  <snan>Liked:</snan> {{$ctrl.stat.liked}} |
-  <snan>Disliked:</snan> {{$ctrl.stat.disliked}} |
-  <snan>Unspecified:</snan> {{$ctrl.stat.unspecified}}
+  <snan>Total:</snan> {{$ctrl.stats.total}} |
+  <snan>Liked:</snan> {{$ctrl.stats.liked}} |
+  <snan>Disliked:</snan> {{$ctrl.stats.disliked}} |
+  <snan>Unspecified:</snan> {{$ctrl.stats.unspecified}}
 </div>
