added search from imdb

--- a/client/app/components/home/home.html
+++ b/client/app/components/home/home.html
@@ -6,6 +6,7 @@
   <div>
     <uib-tab heading="Tab Heading" index="0">
       <movie-stat></movie-stat>
+      <search></search>
     </uib-tab>
 
   </div>
