--- a/client/app/components/home/movieStat/movieStat.html
+++ b/client/app/components/home/movieStat/movieStat.html
@@ -1,6 +1,7 @@
-<div class="col-md-12 alert alert-info" asd="$ctrl.getStat()"/>
-  <snan>Total:</snan> {{$ctrl.stats.total}} |
-  <snan>Liked:</snan> {{$ctrl.stats.liked}} |
-  <snan>Disliked:</snan> {{$ctrl.stats.disliked}} |
-  <snan>Unspecified:</snan> {{$ctrl.stats.unspecified}}
+<div class="col-md-12 alert alert-info" ng-model="$ctrl.movies" ng/>
+<snan>Total:</snan> {{$ctrl.movies.length}} |
+<snan>Liked:</snan> {{$ctrl.liked}}  |
+<snan>Disliked:</snan> {{$ctrl.disliked}} |
+<snan>Unspecified:</snan> {{$ctrl.unspecified}}
+
 </div>
