--- a/client/app/components/movieList/movieList.html
+++ b/client/app/components/movieList/movieList.html
@@ -21,6 +21,7 @@
         <button type="button" class="btn btn-link btn-dislike" ng-click="$ctrl.switchDislike(movie)">
           <span class="glyphicon glyphicon-thumbs-down"></span>
         </button>
+        <add-button movie="movie"></add-button>
       </td>
     </tr>
     <!--then unspecified-->
@@ -35,6 +36,7 @@
         <button type="button" class="btn btn-link btn-dislike" ng-click="$ctrl.switchDislike(movie)">
           <span class="glyphicon glyphicon-thumbs-down"></span>
         </button>
+        <add-button movie="movie"></add-button>
       </td>
     </tr>
     <!--then disliked-->
@@ -49,6 +51,7 @@
         <button type="button" class="btn btn-link btn-dislike" ng-click="$ctrl.switchDislike(movie)">
           <span class="glyphicon glyphicon-thumbs-down"></span>
         </button>
+        <add-button movie="movie"></add-button>
       </td>
     </tr>
     </tbody>
